dist/1.0/bin/sample/retrieveUnpackaged/objects/YellowpagesTP__c.object
<CustomObject>
    <description>Object used to store information for Biuro Numerów TPSA</description>
    <fields>
        <fullName>BRANZA_ABONENTA_1__c</fullName>
        <label>BRANZA_ABONENTA_1</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRANZA_ABONENTA_2__c</fullName>
        <label>BRANZA_ABONENTA_2</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRANZA_ABONENTA_3__c</fullName>
        <label>BRANZA_ABONENTA_3</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <label>CSR ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATA_WYKONANIA__c</fullName>
        <label>DATA_WYKONANIA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DODATEK_ULICY__c</fullName>
        <label>DODATEK_ULICY</label>
        <length>49</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMINA__c</fullName>
        <label>GMINA</label>
        <length>49</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMIE_ABONENTA_1__c</fullName>
        <label>IMIE_ABONENTA_1</label>
        <length>199</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMIE_ABONENTA_2__c</fullName>
        <label>IMIE_ABONENTA_2</label>
        <length>199</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFO__c</fullName>
        <label>INFO</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LACZNIK_NAZWISKA__c</fullName>
        <label>LACZNIK_NAZWISKA</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOKAL__c</fullName>
        <label>LOKAL</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIEJSCOWOSC__c</fullName>
        <label>MIEJSCOWOSC</label>
        <length>49</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAZWA_ABONENTA__c</fullName>
        <label>NAZWA_ABONENTA</label>
        <length>199</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAZWA_ULICY__c</fullName>
        <label>NAZWA_ULICY</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAZWISKO_ABONENTA_1__c</fullName>
        <label>NAZWISKO_ABONENTA_1</label>
        <length>199</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAZWISKO_ABONENTA_2__c</fullName>
        <label>NAZWISKO_ABONENTA_2</label>
        <length>199</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUMER_ABONENTA__c</fullName>
        <label>NUMER_ABONENTA</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBN_OSA__c</fullName>
        <label>OBN_OSA</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLATNIK_UZYTKOWNIK__c</fullName>
        <label>PLATNIK_UZYTKOWNIK</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNA_POSESJI__c</fullName>
        <label>PNA_POSESJI</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POSESJA__c</fullName>
        <label>POSESJA</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POSTAC_PK__c</fullName>
        <label>POSTAC_PK</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POWIAT__c</fullName>
        <label>POWIAT</label>
        <length>49</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRZEDROSTEK_NAZWISKA__c</fullName>
        <label>PRZEDROSTEK_NAZWISKA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RODZAJ_ABONENTA__c</fullName>
        <label>RODZAJ_ABONENTA</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RODZAJ_OPERACJI__c</fullName>
        <label>RODZAJ_OPERACJI</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RODZAJ_URZADZENIA__c</fullName>
        <label>RODZAJ_URZADZENIA</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKROT_SIECI__c</fullName>
        <label>SKROT_SIECI</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Yellowpages</relationshipLabel>
        <relationshipName>Yellowpages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WOJEWODZTWO__c</fullName>
        <label>WOJEWODZTWO</label>
        <length>49</length>
        <type>Text</type>
    </fields>
    <label>YellowpagesTP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RODZAJ_OPERACJI__c</columns>
        <columns>NAZWA_ABONENTA__c</columns>
        <columns>RODZAJ_URZADZENIA__c</columns>
        <columns>POSTAC_PK__c</columns>
        <columns>NUMER_ABONENTA__c</columns>
        <columns>CSR_ID__c</columns>
        <columns>Exported__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yellowpages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>